--- a/login.html
+++ b/login.html
@@ -46,28 +46,18 @@
                     <a href="#" class="forgot__Password d-block my-3 form__small__text">Forgot your password?</a>
                 </form>
             </section>
-            <!-- -------CREATE ACCOUNT-------
-            <section class="container p-3">
-                <h2>Create Account</h2>
-                <p>By creating an account you will get the benefits of a quicker 
-                    checkout with already saved details. You can track you orders 
-                    more easily, view your order history and much more.
-                </p>
-                <button type="submit" class="btn btn-primary">Create Account</button>
-            </section> -->
-            <!-- -------TO TOP------- -->
-            <section class="container my-4 totop p-0">
-                <a href="#top">To the top
-                    <i class="fas fa-arrow-up"></i>
-                </a>
-            </section>
         </div>
         <!-- -------FOOTER------- -->
         <footer class="container-fluid px-3 pt-4">
-            <div class="row justify-content-between">
-                <div class="col-md footer__block my-4 w-75">
-                    <h4 class="footer__heading">Sign up for our newsletter</h4>
-                    <form>
+            <div class="container mb-4 totop p-0">
+                <a href="#top">To the top
+                    <i class="fas fa-arrow-up"></i>
+                </a>
+            </div>
+            <div class="row justify-content-between ">
+                <div class="flex-md-column col-md footer__block my-4 d-md-flex my-4 w-75">
+                    <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
+                    <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
@@ -75,24 +65,30 @@
                         <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
                     </form>
                 </div>
-                <div class="col-md footer__block my-4">
-                    <h4 class="footer__heading">Follow Us</h4>
-                    <i class="fab fa-facebook-f fa-2x p-0"></i>
-                    <i class="fab fa-instagram fa-2x"></i>
-                    <i class="fab fa-twitter fa-2x"></i>
+                <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
+                    <h4 class="footer__heading align-self-center">Follow Us</h4>
+                    <div class="align-self-md-center">
+                        <i class="fab fa-facebook-f fa-2x p-0"></i>
+                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </div>
                 </div>
                 <div class="list-group col-md footer__block my-4">
-                    <h4 class="mx-3">Customer Service</h4>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
+                    <h4 class="mx-3 align-self-md-center">Support</h4>
+                    <div class="align-self-md-center">
+                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
+                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
+                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
+                    </div>
                 </div>
                 <div class="list-group col-md footer__block my-4">
-                    <h4 class="mx-3">Sneaks</h4>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
-                    <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                    <h4 class="mx-3 align-self-md-center">Sneaks</h4>
+                    <div class="align-self-md-center">
+                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
+                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
+                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
+                        <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                    </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-1"> 
