--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
     </head>
     <body>
         <div class="wrapper" id="top">
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
+            <nav class="d-flex justify-content-xl-between navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
-            <!-- -------BREADCRUMB------- -->
-            <!-- <nav class="container breadcrumb px-3" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page"><a href="index.html">Home</a></li>
-                </ol>
-            </nav> -->
             <!-- -------HERO-IMAGE------- -->
-            <section class="mt-4 p-5 bg-primary hero__container mb-5 mt-0" id="hero__image">
-                <div class="message__container"></div>
+            <section class="p-5 bg-primary hero__container mb-5 mt-0" id="hero__image">
+                <!-- <div class="message__container"></div> -->
             </section>
             <!-- -------FEATURED HEADER------- -->
             <section class="container px-4 my-3">
@@ -38,66 +32,63 @@
                     <div class="loading"></div>
                 </div>
             </section>
-            <!-- -------TO TOP------- -->
-            <section class="container my-4 totop p-0">
-                <div class="row">
+        </div>
+            <!-- -------FOOTER------- -->
+            <footer class="container-fluid px-3 pt-4">
+                <div class="container mb-4 totop p-0">
                     <a href="#top">To the top
                         <i class="fas fa-arrow-up"></i>
                     </a>
                 </div>
-            </section>
-        </div>
-            <!-- -------FOOTER------- -->
-        <footer class="container-fluid px-3 pt-4">
-            <div class="row justify-content-between ">
-                <div class="flex-md-column col-md footer__block my-4 d-md-flex my-4 w-75">
-                    <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
-                    <form class="align-self-md-center">
-                        <div class="form-group">
-                                <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <div class="row justify-content-between ">
+                    <div class="flex-md-column col-md footer__block my-4 d-md-flex my-4 w-75">
+                        <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
+                        <form class="align-self-md-center">
+                            <div class="form-group">
+                                    <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
+                            <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
+                        </form>
+                    </div>
+                    <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
+                        <h4 class="footer__heading align-self-center">Follow Us</h4>
+                        <div class="align-self-md-center">
+                            <i class="fab fa-facebook-f fa-2x p-0"></i>
+                            <i class="fab fa-instagram fa-2x"></i>
+                            <i class="fab fa-twitter fa-2x"></i>
                         </div>
-                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
-                    </form>
-                </div>
-                <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
-                    <h4 class="footer__heading align-self-center">Follow Us</h4>
-                    <div class="align-self-md-center">
-                        <i class="fab fa-facebook-f fa-2x p-0"></i>
-                        <i class="fab fa-instagram fa-2x"></i>
-                        <i class="fab fa-twitter fa-2x"></i>
+                    </div>
+                    <div class="list-group col-md footer__block my-4">
+                        <h4 class="mx-3 align-self-md-center">Support</h4>
+                        <div class="align-self-md-center">
+                            <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
+                            <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
+                            <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
+                        </div>
+                    </div>
+                    <div class="list-group col-md footer__block my-4">
+                        <h4 class="mx-3 align-self-md-center">Sneaks</h4>
+                        <div class="align-self-md-center">
+                            <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
+                            <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
+                            <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
+                            <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                        </div>
                     </div>
                 </div>
-                <div class="list-group col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Support</h4>
-                    <div class="align-self-md-center">
-                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
-                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
-                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
+                <div class="d-flex justify-content-center mb-1"> 
+                    <div class=" px-2">
+                        <a href="#">Terms & Conditions</a> 
+                    </div>
+                    <div class=" px-2">
+                        <p>|</p> 
+                    </div>
+                    <div class="px-2">
+                        <a href="#">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="list-group col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Sneaks</h4>
-                    <div class="align-self-md-center">
-                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
-                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
-                        <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
-                        <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center mb-1"> 
-                <div class=" px-2">
-                    <a href="#">Terms & Conditions</a> 
-                </div>
-                <div class=" px-2">
-                    <p>|</p> 
-                </div>
-                <div class="px-2">
-                    <a href="#">Privacy Policy</a>
-                </div>
-            </div>
-        </footer>
+            </footer>
         <script src="./js/index.js" type="module"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
