--- a/profile-page.html
+++ b/profile-page.html
@@ -8,10 +8,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="See our product" />
+        <meta name="description" content="Your profile at Sneaks gives you access to exclusive deals, pre-sales and much more!" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>Sneaks | Product page</title>
+        <title>Sneaks | Admin Profile</title>
     </head>
     <body>
         <div class="wrapper" id="top">
@@ -20,21 +20,17 @@
             </nav>
             <!-- -------BREADCRUMB------- -->
             <nav aria-label="breadcrumb" class="px-3 pt-2">
-                <ol class="breadcrumb breadcrumb__list">
+                <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="products.html">Products</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Admin page</li>
                 </ol>
             </nav>
-            <!-- -------PRODUCT TITLE------- -->
-            <section class="container product__header px-3">
+            <!-- -------SITE HEADER------- -->
+            <section class="container username px-3">
             </section>
-            <!-- -------PRODUCT DETAILS------- -->
-            <section class="container px-3 card__block">
-                <div class="row justify-content-between">
-                    <div class="col-md mb-5 product__card p-0">
-                        <div class="message__container"></div>
-                        <div class="loading"></div>
-                    </div>
+            <!-- -------MENU------- -->
+            <section class="container w-75">
+                <div class="list-group shadow-sm p-3 my-3 bg-white profile__menu rounded-0">
                 </div>
             </section>
         </div>
@@ -78,7 +74,7 @@
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
-                        <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                        <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +90,7 @@
                 </div>
             </div>
         </footer>
-        <script src="./js/productPage.js" type="module"></script>
+        <script src="./js/profilePage.js" type="module"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
