--- a/cart.html
+++ b/cart.html
@@ -61,8 +61,8 @@
                 <hr/>
             </section>
             <!-- -------SUMMARY------- -->
-            <section class="container px-3">
-                <h2>Order Summary</h2>
+            <section class="container px-3 total__container">
+                <!-- <h2>Order Summary</h2>
                 <p>You order:</p>
                 <div class="table-responsive table-sm">
                     <table class="table">
@@ -85,25 +85,25 @@
                         </tr>
                     </table>
                 </div>
-                <a href="#" class="btn btn-primary">To Checkout</a>
+                <a href="#" class="btn btn-primary">To Checkout</a> -->
             </section>
         </div>
         <!-- -------FOOTER------- -->
-        <footer class="container-fluid px-3 pt-4">
+        <footer class="container-fluid px-3 pt-4 mt-5 justify-content-evenly">
             <div class="container mb-4 totop p-0">
                 <a href="#top">To the top
                     <i class="fas fa-arrow-up"></i>
                 </a>
             </div>
-            <div class="row justify-content-between ">
-                <div class="flex-md-column col-md footer__block my-4 d-md-flex my-4 w-75">
+            <div class="p-0 flex-grow-1 row justify-content-between">
+                <div class="flex-md-column col-md footer__block d-md-flex my-4 w-75">
                     <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
                     <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2 mt-3" href="#">Submit</button>
                     </form>
                 </div>
                 <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
@@ -114,7 +114,7 @@
                         <i class="fab fa-twitter fa-2x"></i>
                     </div>
                 </div>
-                <div class="list-group col-md footer__block my-4">
+                <div class="list-group p-0 col-md footer__block my-4">
                     <h4 class="mx-3 align-self-md-center">Support</h4>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
@@ -122,7 +122,7 @@
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
                     </div>
                 </div>
-                <div class="list-group col-md footer__block my-4">
+                <div class="p-0 list-group col-md footer__block my-4">
                     <h4 class="mx-3 align-self-md-center">Sneaks</h4>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </footer>
-        <script src="./js/index.js" type="module"></script>
+        <script src="./js/cart.js" type="module"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
