--- a/edit-list.html
+++ b/edit-list.html
@@ -8,10 +8,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="See our product" />
+        <meta name="description" content="Edit products for administrators" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>Sneaks | Product page</title>
+        <title>Sneaks | Choose product to edit</title>
     </head>
     <body>
         <div class="wrapper" id="top">
@@ -20,21 +20,21 @@
             </nav>
             <!-- -------BREADCRUMB------- -->
             <nav aria-label="breadcrumb" class="px-3 pt-2">
-                <ol class="breadcrumb breadcrumb__list">
+                <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="products.html">Products</a></li>
+                    <li class="breadcrumb-item"><a href="profile-page.html">Admin page</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Edit products</li>
                 </ol>
             </nav>
-            <!-- -------PRODUCT TITLE------- -->
-            <section class="container product__header px-3">
+            <!-- -------PRODUCT HEADER------- -->
+            <section class="container px-3 my-3">
+                <h1>Choose product to edit</h1>
             </section>
-            <!-- -------PRODUCT DETAILS------- -->
+            <!-- -------PRODUCTS------- -->
             <section class="container px-3 card__block">
-                <div class="row justify-content-between">
-                    <div class="col-md mb-5 product__card p-0">
-                        <div class="message__container"></div>
-                        <div class="loading"></div>
-                    </div>
+                <div class="row justify-content-start edit__container">
+                    <div class="message__container"></div>
+                    <div class="loading"></div>
                 </div>
             </section>
         </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </footer>
-        <script src="./js/productPage.js" type="module"></script>
+        <script src="./js/editList.js" type="module"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
