--- a/edit-product.html
+++ b/edit-product.html
@@ -8,10 +8,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="See our product" />
+        <meta name="description" content="Administrator page for editing products" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>Sneaks | Product page</title>
+        <title>Sneaks | Edit product</title>
     </head>
     <body>
         <div class="wrapper" id="top">
@@ -22,20 +22,46 @@
             <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb breadcrumb__list">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="products.html">Products</a></li>
+                    <li class="breadcrumb-item"><a href="profile-page.html">Admin page</a></li>
+                    <li class="breadcrumb-item"><a href="edit-list.html">Edit products</a></li>
                 </ol>
             </nav>
-            <!-- -------PRODUCT TITLE------- -->
-            <section class="container product__header px-3">
+            <!-- -------SITE HEADER------- -->
+            <section class="container px-3">
+                <h1>Edit Product</h1>
             </section>
-            <!-- -------PRODUCT DETAILS------- -->
-            <section class="container px-3 card__block">
-                <div class="row justify-content-between">
-                    <div class="col-md mb-5 product__card p-0">
-                        <div class="message__container"></div>
-                        <div class="loading"></div>
+            <!-- -------EDIT  FORM------- -->
+            <section class="container mb-5">
+                <form class="edit__form  shadow-sm bg-white rounded-0 mt-3 p-3">
+                    <div class="message__container"></div>
+                    <div class="loading"></div>
+                    <div class="form-group my-3">
+                        <label for="productname">Product name</label>
+                        <input type="name" class="form-control mt-1" id="productname" aria-describedby="editProductName" placeholder="Name">
                     </div>
-                </div>
+                    <div class="form-group my-3">
+                        <label for="productprice">Product price</label>
+                        <input type="price" class="form-control mt-1" id="productprice" aria-describedby="editProductName" placeholder="Price">
+                    </div>
+                    <div class="form-group my-3">
+                        <label for="productdescription">Description</label>
+                        <textarea class="form-control mt-1" id="productdescription" rows="3" placeholder="Add description"></textarea>
+                    </div>
+                    <div class="my-3">
+                        <label class="mr-4">Is it a featured product?</label>
+                        <select name="featured" class="form-select toggleFeaturedProduct form__small__text mt-1">
+                            <option value="true">Yes</option>
+                            <option value="false">No</option>
+                        </select>
+                    </div>
+                    <div class="form-group my-3">
+                        <label for="productprice">Add Image URL</label>
+                        <input type="url" value="" class="form-control mt-1" id="addImage" aria-describedby="editProductName" placeholder="Image URL">
+                    </div>
+                    <input id="id" type="hidden" />
+                    <button type="submit" class="btn btn-primary my-3">Save edit</button>
+                    <div class="delete__container"></div>
+                </form>
             </section>
         </div>
         <!-- -------FOOTER------- -->
@@ -94,7 +120,7 @@
                 </div>
             </div>
         </footer>
-        <script src="./js/productPage.js" type="module"></script>
+        <script src="./js/edit.js" type="module"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
