--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Sign up to receive exclusive deals, get notified about our sales and much more" />
+        <meta name="description" content="Login page for administrators" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
         <title>Sneaks | Login</title>
@@ -30,9 +30,8 @@
                 <h1>Member Login</h1>
             </section>
             <!-- -------LOGIN FORM------- -->
-            <section class="container">
-                <form class="shadow-sm p-3 mb-5 bg-white rounded login__form bg-white rounded-0 mt-3 p-3">
-                    <div class="message__container"></div>
+            <section class="container d-flex justify-content-center">
+                <form class="my-3 shadow-sm p-3 bg-white rounded login__form bg-white rounded-0 p-3 w-75">
                     <div class="message__container"></div>
                     <div class="form-group my-3">
                         <label for="username">Your username</label>
@@ -48,21 +47,21 @@
             </section>
         </div>
         <!-- -------FOOTER------- -->
-        <footer class="container-fluid px-3 pt-4">
+        <footer class="container-fluid px-3 pt-4 mt-5 justify-content-evenly">
             <div class="container mb-4 totop p-0">
                 <a href="#top">To the top
                     <i class="fas fa-arrow-up"></i>
                 </a>
             </div>
-            <div class="row justify-content-between ">
-                <div class="flex-md-column col-md footer__block my-4 d-md-flex my-4 w-75">
+            <div class="p-0 flex-grow-1 row justify-content-between">
+                <div class="flex-md-column col-md footer__block d-md-flex my-4 w-75">
                     <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
                     <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2 mt-3" href="#">Submit</button>
                     </form>
                 </div>
                 <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
@@ -73,7 +72,7 @@
                         <i class="fab fa-twitter fa-2x"></i>
                     </div>
                 </div>
-                <div class="list-group col-md footer__block my-4">
+                <div class="list-group p-0 col-md footer__block my-4">
                     <h4 class="mx-3 align-self-md-center">Support</h4>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
@@ -81,13 +80,13 @@
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
                     </div>
                 </div>
-                <div class="list-group col-md footer__block my-4">
+                <div class="p-0 list-group col-md footer__block my-4">
                     <h4 class="mx-3 align-self-md-center">Sneaks</h4>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
-                        <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                        <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                     </div>
                 </div>
             </div>
