--- a/edit-product.html
+++ b/edit-product.html
@@ -32,7 +32,7 @@
             </section>
             <!-- -------EDIT  FORM------- -->
             <section class="container mb-5">
-                <form class="edit__form  shadow-sm bg-white rounded-0 mt-3 p-3">
+                <form class="edit__form  shadow-sm bg-white rounded-0 mt-3 p-3" style="max-width: 540px;">
                     <div class="message__container"></div>
                     <div class="loading"></div>
                     <div class="form-group my-3">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="form-group my-3">
                         <label for="productprice">Add Image URL</label>
-                        <input type="url" value="" class="form-control mt-1" id="addImage" aria-describedby="editProductName" placeholder="Image URL">
+                        <input type="url" value="" onfocus="this.value=''" class="form-control mt-1" id="addImage" aria-describedby="editProductName" placeholder="Image URL">
                     </div>
                     <input id="id" type="hidden" />
                     <button type="submit" class="btn btn-primary my-3">Save edit</button>
@@ -73,7 +73,7 @@
             </div>
             <div class="p-0 flex-grow-1 row justify-content-between">
                 <div class="flex-md-column col-md footer__block d-md-flex my-4 w-75">
-                    <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
+                    <h2 class="footer__heading align-self-md-center">Sign up for our newsletter</h2>
                     <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
@@ -83,7 +83,7 @@
                     </form>
                 </div>
                 <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
-                    <h4 class="footer__heading align-self-center">Follow Us</h4>
+                    <h2 class="footer__heading align-self-center">Follow Us</h2>
                     <div class="align-self-md-center">
                         <i class="fab fa-facebook-f fa-2x p-0"></i>
                         <i class="fab fa-instagram fa-2x"></i>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="list-group p-0 col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Support</h4>
+                    <h2 class="mx-3 align-self-md-center">Support</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
@@ -99,12 +99,12 @@
                     </div>
                 </div>
                 <div class="p-0 list-group col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Sneaks</h4>
+                    <h2 class="mx-3 align-self-md-center">Sneaks</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
-                        <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                        <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                     </div>
                 </div>
             </div>
