--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="d-flex justify-content-xl-between navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------HERO-IMAGE------- -->
-            <section class="bg-white hero__container mt-0 w-100 p-0" id="hero__image">
+            <section class="bg-white hero__container mt-0 w-100">
             </section>
             <!-- -------FEATURED HEADER------- -->
             <section class="container px-4 my-3">
@@ -40,7 +40,7 @@
             </div>
             <div class="p-0 flex-grow-1 row justify-content-between">
                 <div class="flex-md-column col-md footer__block d-md-flex my-4 w-75">
-                    <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
+                    <h2 class="footer__heading align-self-md-center">Sign up for our newsletter</h2>
                     <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
@@ -50,7 +50,7 @@
                     </form>
                 </div>
                 <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
-                    <h4 class="footer__heading align-self-center">Follow Us</h4>
+                    <h2 class="footer__heading align-self-center">Follow Us</h2>
                     <div class="align-self-md-center">
                         <i class="fab fa-facebook-f fa-2x p-0"></i>
                         <i class="fab fa-instagram fa-2x"></i>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="list-group p-0 col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Support</h4>
+                    <h2 class="mx-3 align-self-md-center">Support</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="p-0 list-group col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Sneaks</h4>
+                    <h2 class="mx-3 align-self-md-center">Sneaks</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
