--- a/product-page.html
+++ b/product-page.html
@@ -29,10 +29,9 @@
             <section class="container product__header px-3">
             </section>
             <!-- -------PRODUCT DETAILS------- -->
-            <section class="container px-3 card__block">
+            <section class="container px-3 card__block ">
                 <div class="row justify-content-between">
-                    <div class="col-md mb-5 product__card p-0">
-                        <div class="message__container"></div>
+                    <div class="col-md mb-5 product__card p-0" style="max-width: 400px;">
                         <div class="loading"></div>
                     </div>
                 </div>
@@ -47,7 +46,7 @@
             </div>
             <div class="p-0 flex-grow-1 row justify-content-between">
                 <div class="flex-md-column col-md footer__block d-md-flex my-4 w-75">
-                    <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
+                    <h2 class="footer__heading align-self-md-center">Sign up for our newsletter</h2>
                     <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
@@ -57,7 +56,7 @@
                     </form>
                 </div>
                 <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
-                    <h4 class="footer__heading align-self-center">Follow Us</h4>
+                    <h2 class="footer__heading align-self-center">Follow Us</h2>
                     <div class="align-self-md-center">
                         <i class="fab fa-facebook-f fa-2x p-0"></i>
                         <i class="fab fa-instagram fa-2x"></i>
@@ -65,7 +64,7 @@
                     </div>
                 </div>
                 <div class="list-group p-0 col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Support</h4>
+                    <h2 class="mx-3 align-self-md-center">Support</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
@@ -73,12 +72,12 @@
                     </div>
                 </div>
                 <div class="p-0 list-group col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Sneaks</h4>
+                    <h2 class="mx-3 align-self-md-center">Sneaks</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
-                        <a href="/login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
+                        <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                     </div>
                 </div>
             </div>
