--- a/profile-page.html
+++ b/profile-page.html
@@ -29,8 +29,8 @@
             <section class="container username px-3">
             </section>
             <!-- -------MENU------- -->
-            <section class="container w-75">
-                <div class="list-group shadow-sm p-3 my-3 bg-white profile__menu rounded-0">
+            <section class="container">
+                <div class="list-group shadow-sm p-3 my-3 bg-white profile__menu rounded-" style="max-width: 540px;">
                 </div>
             </section>
         </div>
@@ -43,7 +43,7 @@
             </div>
             <div class="p-0 flex-grow-1 row justify-content-between">
                 <div class="flex-md-column col-md footer__block d-md-flex my-4 w-75">
-                    <h4 class="footer__heading align-self-md-center">Sign up for our newsletter</h4>
+                    <h2 class="footer__heading align-self-md-center">Sign up for our newsletter</h2>
                     <form class="align-self-md-center">
                         <div class="form-group">
                                 <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
@@ -53,7 +53,7 @@
                     </form>
                 </div>
                 <div class="flex-md-column col-md footer__block my-4 d-md-flex ">
-                    <h4 class="footer__heading align-self-center">Follow Us</h4>
+                    <h2 class="footer__heading align-self-center">Follow Us</h2>
                     <div class="align-self-md-center">
                         <i class="fab fa-facebook-f fa-2x p-0"></i>
                         <i class="fab fa-instagram fa-2x"></i>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="list-group p-0 col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Support</h4>
+                    <h2 class="mx-3 align-self-md-center">Support</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="p-0 list-group col-md footer__block my-4">
-                    <h4 class="mx-3 align-self-md-center">Sneaks</h4>
+                    <h2 class="mx-3 align-self-md-center">Sneaks</h2>
                     <div class="align-self-md-center">
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                         <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
